# nektarcpp17

./: CMakeLists.txt  boost_ignore_unused_library.txt
docs/tutorial/: CMakeLists.txt  README.md
docs/tutorial/basics/: CMakeLists.txt
docs/tutorial/basics/advection-diffusion/: CMakeLists.txt  basics-advection-diffusion.tex
docs/tutorial/basics/advection-diffusion/basics-advection-diffusion/completed/: ADR_conditions.xml
docs/tutorial/basics/advection-diffusion/tests/: basics-advection-diffusion-msh-align.tst  basics-advection-diffusion-msh.tst  basics-advection-diffusion-post.tst  basics-advection-diffusion-slv.tst
docs/tutorial/basics/helmholtz/: CMakeLists.txt  basics-helmholtz.tex
docs/tutorial/basics/helmholtz/basics-helmholtz/completed/: Helm_conditions.xml
docs/tutorial/basics/helmholtz/tests/: basics-helmholtz-msh.tst  basics-helmholtz-post.tst  basics-helmholtz-slv.tst
docs/tutorial/cfs/: CMakeLists.txt
docs/tutorial/cfs/CylinderSubsonic_NS/: CMakeLists.txt  cfs-CylinderSubsonic_NS.tex
docs/tutorial/cfs/CylinderSubsonic_NS/cfs-CylinderSubsonic_NS/completed/1000steps/: CylinderSubsonic_NS.xml
docs/tutorial/cfs/CylinderSubsonic_NS/cfs-CylinderSubsonic_NS/completed/Time0.6/: CylinderSubsonic_NS.xml
docs/tutorial/cfs/CylinderSubsonic_NS/cfs-CylinderSubsonic_NS/tutorial/: CylinderSubsonic_NS.xml
docs/tutorial/events/: CMakeLists.txt
docs/tutorial/events/2011/: CMakeLists.txt
docs/tutorial/events/2011/Cambridge-AIM/: CMakeLists.txt  CambridgeTutorial.tex  Channel.geo  bfs-cc-tg.xml  bfs-cc.xml  bfs2.geo
docs/tutorial/events/2011/Cambridge-AIM/Channel/Base/: Channel-Base.fld  Channel-Base.vtu  Channel-Base.xml  Channel-Base_0.chk  Channel-Base_1.chk
docs/tutorial/events/2011/Cambridge-AIM/Channel/Stability/: Channel_Coupled.xml  Channel_VCS.evl  Channel_VCS.xml  Channel_VCS_0.chk
docs/tutorial/events/2011/Cambridge-AIM/backward-facing_step/Stability/: bfs_tg.xml
docs/tutorial/events/2015/: CMakeLists.txt
docs/tutorial/events/2015/Crete-SummerSchool/: CMakeLists.txt  CreteTutorial.tex  NektarInstallaton.tex
docs/tutorial/events/2015/Imperial-NektarWorkshop/: CMakeLists.txt  Imperial-NektarWorkshop.tex  refs.bib  styling.cfg
docs/tutorial/events/2015/Imperial-NektarWorkshop/tutorial1-adr/: tutorial1-adr.tex
docs/tutorial/events/2015/Imperial-NektarWorkshop/tutorial1-adr/Files/: ADR_mesh_aligned.fld  ADR_mesh_aligned_0.chk  ADR_mesh_aligned_0.vtu  ADR_mesh_aligned_1.chk  ADR_mesh_aligned_1.vtu  ADR_mesh_aligned_10.vtu  ADR_mesh_aligned_2.chk  ADR_mesh_aligned_2.vtu  ADR_mesh_aligned_3.chk  ADR_mesh_aligned_3.vtu  ADR_mesh_aligned_4.chk  ADR_mesh_aligned_4.vtu  ADR_mesh_aligned_5.chk  ADR_mesh_aligned_5.vtu  ADR_mesh_aligned_6.chk  ADR_mesh_aligned_6.vtu  ADR_mesh_aligned_7.chk  (+6 more)
docs/tutorial/flow-stability/: CMakeLists.txt
docs/tutorial/flow-stability/bfs/: CMakeLists.txt  flow-stability-bfs.tex
docs/tutorial/flow-stability/bfs/tests/: flow-stability-bfs-base.tst  flow-stability-bfs-tg.tst
docs/tutorial/flow-stability/channel/: CMakeLists.txt  flow-stability-channel.tex
docs/tutorial/flow-stability/channel/tests/: flow-stability-channel-base.tst  flow-stability-channel-coupled.tst  flow-stability-channel-vcs.tst
docs/tutorial/flow-stability/cylinder/: CMakeLists.txt  flow-stability-cylinder.tex
docs/tutorial/flow-stability/cylinder/tests/: flow-stability-cylinder-adjoint.tst  flow-stability-cylinder-base.tst  flow-stability-cylinder-direct.tst
docs/tutorial/fundamentals/: CMakeLists.txt
docs/tutorial/fundamentals/differentiation/: CMakeLists.txt  fundamentals-differentiation.tex
docs/tutorial/fundamentals/differentiation/fundamentals-differentiation/tutorial/: LocDifferentiation2D.cpp  StdDifferentiation1D.cpp  StdDifferentiation2D.cpp
docs/tutorial/fundamentals/differentiation/tests/: fundamentals-differentiation-loc2D.tst  fundamentals-differentiation-std1D.tst  fundamentals-differentiation-std2D.tst
docs/tutorial/fundamentals/integration/: CMakeLists.txt  fundamentals-integration.tex
docs/tutorial/fundamentals/integration/fundamentals-integration/tutorial/: LocIntegration2D.cpp  StdIntegration1D.cpp  StdIntegration2D.cpp
docs/tutorial/fundamentals/integration/tests/: fundamentals-integration-loc2D.tst  fundamentals-integration-std1D.tst  fundamentals-integration-std2D.tst
docs/tutorial/fundamentals/python/: CMakeLists.txt
docs/tutorial/fundamentals/python/differentiation/: CMakeLists.txt  fundamentals-differentiation.tex
docs/tutorial/fundamentals/python/differentiation/tests/: fundamentals-differentiation-loc2D-python.tst  fundamentals-differentiation-std1D-python.tst  fundamentals-differentiation-std2D-python.tst
docs/tutorial/fundamentals/python/integration/: CMakeLists.txt  fundamentals-integration.tex
docs/tutorial/fundamentals/python/integration/img/: quadmap.tiff
docs/tutorial/fundamentals/python/integration/tests/: fundamentals-integration-loc2D-python.tst  fundamentals-integration-std1D-python.tst  fundamentals-integration-std2D-python.tst
docs/tutorial/incns/: CMakeLists.txt
docs/tutorial/incns/taylor-green-vortex/: CMakeLists.txt  incns-taylor-green-vortex.tex
docs/tutorial/incns/taylor-green-vortex/img/: Ek.eps  Fourier_E.eps  enstrophy.eps  epsilon.eps  grid128.eps  grid64.eps  t12.eps  t3.eps  t5.eps  t7.eps  t8.eps  t9.eps  ufield.eps  vfield.eps  vort.eps  zvort.eps
docs/tutorial/incns/taylor-green-vortex/tests/: incns-taylor-green-vortex-64.tst
docs/tutorial/mesh-generation/: CMakeLists.txt
docs/tutorial/mesh-generation/2d-naca/: CMakeLists.txt  mesh-generation-2d-naca.tex
docs/tutorial/mesh-generation/2d-naca/mesh-generation-2d-naca/completed/: session_naca.xml
docs/tutorial/mesh-generation/2d-naca/mesh-generation-2d-naca/tutorial/: session_naca.xml
docs/tutorial/mesh-generation/2d-step/: CMakeLists.txt  mesh-generation-2d-step.tex
docs/tutorial/mesh-generation/2d-step/mesh-generation-2d-step/tutorial/: session_cyl.xml
docs/tutorial/mesh-generation/2d-step/tests/: mesh-generation-2d-step.tst
docs/tutorial/shared/: pgfsys-tex4ht.def  tutorial-preamble.tex
(+166 files in other folders)
